--- a/config/config.json
+++ b/config/config.json
@@ -1,6 +1,6 @@
 {
   "development": {
-    "url": "postgres://pnmnsahd:DFjjxccR4bRosnZvBq4kFzmHyXZTS0Dk@hattie.db.elephantsql.com/pnmnsahd"
+    "url": "postgres://jzapjlnj:V1B0x7EU6Z3xPN_3uEYHp_4UGr-u2_XF@balarama.db.elephantsql.com/jzapjlnj"
   },
   "test": {
     "username": "root",
